--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -8,34 +8,12 @@
     }
    },
    "source": [
-    "# Installation with conda\n",
+    "# Installation \n",
     "\n",
-    "- **Conda is already installed on workstations.**\n",
     "\n",
-    "- Steps below are for students who prefer to use their personal laptops"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "##  Install [Anaconda](https://www.anaconda.com/downloads) (large) or [Miniconda](https://conda.io/miniconda.html) (small)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "##  Open a terminal (Linux/MacOSX) or a conda prompt (Windows)"
+    "Pour installer Jupyter, vous avez besoin d'un distribution Python.  [Miniconda](https://conda.io/miniconda.html) est une solution légère permettant d'installer tous les packages nécessaires.\n",
+    "\n",
+    "Une fois installer miniconda en ayant suivi les instructions, ouvrez un terminal ou un anaconda prompt sur windows.\n"
    ]
   },
   {
@@ -92,6 +70,247 @@
     "       --name big-data\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Jupyter Notebook\n",
+    "\n",
+    "Jupyter notebook, formerly known as the IPython notebook, is a flexible tool that helps you create readable analyses, as you can keep code, images, comments, formulae and plots together.\n",
+    "\n",
+    "Jupyter is quite extensible, supports many programming languages and is easily hosted on your computer or on almost any server — you only need to have ssh or http access. Best of all, it's completely free.\n",
+    "\n",
+    "The name Jupyter is an indirect acronyum of the three core languages it was designed for: **JU**lia, **PYT**hon, and **R**\n",
+    "<!-- #endregion -->\n",
+    "\n",
+    "<!-- #region slideshow={\"slide_type\": \"slide\"} -->\n",
+    "# Installation \n",
+    " \n",
+    "## Installation with conda\n",
+    "```bash\n",
+    "conda install -c conda-forge jupyter\n",
+    "```\n",
+    "\n",
+    "## with pip\n",
+    "```bash\n",
+    "pip install jupyter\n",
+    "```\n",
+    "<!-- #endregion -->\n",
+    "\n",
+    "<!-- #region slideshow={\"slide_type\": \"slide\"} -->\n",
+    "## Installing Python Packages from a Jupyter Notebook\n",
+    "\n",
+    "### Install a conda package in the current Jupyter kernel\n",
+    "\n",
+    "Example with package `numpy` from *conda-forge*\n",
+    "```python\n",
+    "import sys\n",
+    "!conda install --yes --prefix {sys.prefix} -c conda-forge numpy\n",
+    "```\n",
+    "\n",
+    "### Install a pip package in the current Jupyter kernel\n",
+    "```\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install numpy\n",
+    "```\n",
+    "<!-- #endregion -->\n",
+    "\n",
+    "## Keyboard Shortcuts\n",
+    "\n",
+    "- To access keyboard shortcuts, use the command palette: `Cmd + Shift + P`\n",
+    "\n",
+    "- `Esc` will take you into command mode where you can navigate around your notebook with arrow keys.\n",
+    "- While in command mode:\n",
+    "   - A to insert a new cell above the current cell, B to insert a new cell below.\n",
+    "   - M to change the current cell to Markdown, Y to change it back to code\n",
+    "   - D + D (press the key twice) to delete the current cell\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Easy links to documentation\n",
+    "\n",
+    "- Shift + Tab will also show you the Docstring\n",
+    "\n",
+    "```python\n",
+    "dict\n",
+    "```\n",
+    "\n",
+    "## Plotting in notebooks\n",
+    "\n",
+    "```python\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "plt.rcParams['figure.figsize'] = (10,6)\n",
+    "fig, ax = plt.subplots()\n",
+    "np.random.seed(0)\n",
+    "x, y = np.random.normal(size=(2, 200))\n",
+    "color, size = np.random.random((2, 200))\n",
+    "\n",
+    "ax.scatter(x, y, c=color, s=500 * size, alpha=0.3)\n",
+    "ax.grid(color='lightgray', alpha=0.7)\n",
+    "```\n",
+    "\n",
+    "```py\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install seaborn\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# Histogram with modified axes/grid\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "ax = fig.add_subplot(111)\n",
+    "\n",
+    "x = np.random.normal(size=1000)\n",
+    "ax.hist(x, 30,  fc='lightblue', ec='k');\n",
+    "```\n",
+    "\n",
+    "<!-- #region slideshow={\"slide_type\": \"slide\"} -->\n",
+    "## Magic commands\n",
+    "<!-- #endregion -->\n",
+    "\n",
+    "```python\n",
+    "%lsmagic\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%ls\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%%file sample.txt\n",
+    "\n",
+    "write the cell content to the file sample.txt.\n",
+    "The file is created when you run this cell.\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%cat sample.txt\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%%file fibonacci.py\n",
+    "\n",
+    "f1, f2 = 1, 1\n",
+    "for n in range(10):\n",
+    "    print(f1, end=',')\n",
+    "    f1, f2 = f2, f1+f2\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%cat fibonacci.py\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%run fibonacci.py\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "#%load fibonacci.py\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%%time\n",
+    "f1, f2 = 1, 1\n",
+    "for n in range(10):\n",
+    "    print(f1, end=',')\n",
+    "    f1, f2 = f2, f1+f2\n",
+    "print()\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%who int\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "%timeit np.random.normal(size=100)\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "from time import sleep\n",
+    "def fibonacci(n):\n",
+    "    f1, f2 = 1, 1\n",
+    "    res = []\n",
+    "    for i in range(n):\n",
+    "        f1, f2 = f2, f1+f2\n",
+    "        res.append(f1)\n",
+    "    return res\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%prun fibonacci(10)\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install py-heat-magic\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%load_ext heat\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "%%heat\n",
+    "\n",
+    "from time import sleep\n",
+    "def fibonacci(n):\n",
+    "    f1, f2 = 1, 1\n",
+    "    res = []\n",
+    "    for i in range(n):\n",
+    "        f1, f2 = f2, f1+f2\n",
+    "        res.append(f1)\n",
+    "    return res\n",
+    "\n",
+    "fibonacci(100)\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install tqdm\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "from tqdm.notebook import tqdm\n",
+    "from time import sleep\n",
+    "\n",
+    "n = 10\n",
+    "res = [1]\n",
+    "\n",
+    "for x in tqdm(range(2, n)):\n",
+    "    sleep(0.2)\n",
+    "    for i in range(2, x):\n",
+    "        if (x % i) == 0:\n",
+    "            break\n",
+    "        else:\n",
+    "            res.append(x)\n",
+    "            break\n",
+    "\n",
+    "res\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
