--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -10,10 +10,9 @@
    "source": [
     "# Installation \n",
     "\n",
+    "Pour construire note site, nous avez besoin d'une distribution Python. [Miniconda](https://conda.io/miniconda.html) est une solution légère permettant d'installer tous les packages nécessaires.\n",
     "\n",
-    "Pour installer Jupyter, vous avez besoin d'un distribution Python.  [Miniconda](https://conda.io/miniconda.html) est une solution légère permettant d'installer tous les packages nécessaires.\n",
-    "\n",
-    "Une fois installer miniconda en ayant suivi les instructions, ouvrez un terminal ou un anaconda prompt sur windows.\n"
+    "Une fois installer miniconda en ayant suivi les instructions, ouvrez un terminal sur Linux/Macos ou un anaconda prompt sur Windows.\n"
    ]
   },
   {
@@ -24,14 +23,23 @@
     }
    },
    "source": [
-    "## Create a new conda environment from file\n",
+    "## Environement conda\n",
     "\n",
     "```bash\n",
-    "cd big-data\n",
+    "git clone https://gitlab.math.unistra.fr/navaro/agrocampus\n",
+    "cd agrocampus\n",
     "conda env create\n",
     "```\n",
     "\n",
-    "[Conda envs documentation](https://conda.io/docs/using/envs.html)."
+    "[documentation](https://conda.io/docs/using/envs.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'environement est créé a partir d'un fichier nommé `environment.yml` qui contient la liste des packages dont nous avons besoin.\n",
+    "\n"
    ]
   },
   {
@@ -42,9 +50,10 @@
     }
    },
    "source": [
-    "## Activate the new environment (for all students)\n",
+    "## Activer l'environment conda\n",
     "\n",
-    "Activating the conda environment will change your shell’s prompt to show what virtual environment you’re using, and modify the environment so that running python will get you that particular version and installation of Python. \n",
+    "Lorsque vous activer l'environement conda, votre configuration du terminal est modifiée et la version\n",
+    "de python qui sera disponible sera celle ou tous nos packages seront installés.\n",
     "<pre>\n",
     "$ conda activate big-data\n",
     "(big-data) $ python\n",
@@ -82,10 +91,17 @@
     "\n",
     "Jupyter is quite extensible, supports many programming languages and is easily hosted on your computer or on almost any server — you only need to have ssh or http access. Best of all, it's completely free.\n",
     "\n",
-    "The name Jupyter is an indirect acronyum of the three core languages it was designed for: **JU**lia, **PYT**hon, and **R**\n",
-    "<!-- #endregion -->\n",
-    "\n",
-    "<!-- #region slideshow={\"slide_type\": \"slide\"} -->\n",
+    "The name Jupyter is an indirect acronyum of the three core languages it was designed for: **JU**lia, **PYT**hon, and **R**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Installation \n",
     " \n",
     "## Installation with conda\n",
@@ -96,10 +112,17 @@
     "## with pip\n",
     "```bash\n",
     "pip install jupyter\n",
-    "```\n",
-    "<!-- #endregion -->\n",
-    "\n",
-    "<!-- #region slideshow={\"slide_type\": \"slide\"} -->\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Installing Python Packages from a Jupyter Notebook\n",
     "\n",
     "### Install a conda package in the current Jupyter kernel\n",
@@ -114,9 +137,13 @@
     "```\n",
     "import sys\n",
     "!{sys.executable} -m pip install numpy\n",
-    "```\n",
-    "<!-- #endregion -->\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Keyboard Shortcuts\n",
     "\n",
     "- To access keyboard shortcuts, use the command palette: `Cmd + Shift + P`\n",
@@ -125,28 +152,52 @@
     "- While in command mode:\n",
     "   - A to insert a new cell above the current cell, B to insert a new cell below.\n",
     "   - M to change the current cell to Markdown, Y to change it back to code\n",
-    "   - D + D (press the key twice) to delete the current cell\n",
-    "\n",
-    "\n",
-    "\n",
+    "   - D + D (press the key twice) to delete the current cell\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Easy links to documentation\n",
     "\n",
-    "- Shift + Tab will also show you the Docstring\n",
-    "\n",
-    "```python\n",
-    "dict\n",
-    "```\n",
-    "\n",
-    "## Plotting in notebooks\n",
-    "\n",
-    "```python\n",
+    "- Shift + Tab will also show you the Docstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting in notebooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.rcParams['figure.figsize'] = (10,6)\n",
     "fig, ax = plt.subplots()\n",
     "np.random.seed(0)\n",
@@ -154,15 +205,25 @@
     "color, size = np.random.random((2, 200))\n",
     "\n",
     "ax.scatter(x, y, c=color, s=500 * size, alpha=0.3)\n",
-    "ax.grid(color='lightgray', alpha=0.7)\n",
-    "```\n",
-    "\n",
+    "ax.grid(color='lightgray', alpha=0.7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```py\n",
     "import sys\n",
     "!{sys.executable} -m pip install seaborn\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Histogram with modified axes/grid\n",
     "import seaborn as sns\n",
     "sns.set()\n",
@@ -171,72 +232,139 @@
     "ax = fig.add_subplot(111)\n",
     "\n",
     "x = np.random.normal(size=1000)\n",
-    "ax.hist(x, 30,  fc='lightblue', ec='k');\n",
-    "```\n",
-    "\n",
-    "<!-- #region slideshow={\"slide_type\": \"slide\"} -->\n",
-    "## Magic commands\n",
-    "<!-- #endregion -->\n",
-    "\n",
-    "```python\n",
-    "%lsmagic\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%ls\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "ax.hist(x, 30,  fc='lightblue', ec='k');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Magic commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%lsmagic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%file sample.txt\n",
     "\n",
     "write the cell content to the file sample.txt.\n",
-    "The file is created when you run this cell.\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%cat sample.txt\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "The file is created when you run this cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat sample.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%file fibonacci.py\n",
     "\n",
     "f1, f2 = 1, 1\n",
     "for n in range(10):\n",
     "    print(f1, end=',')\n",
-    "    f1, f2 = f2, f1+f2\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%cat fibonacci.py\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%run fibonacci.py\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "#%load fibonacci.py\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "    f1, f2 = f2, f1+f2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cat fibonacci.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run fibonacci.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%load fibonacci.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "f1, f2 = 1, 1\n",
     "for n in range(10):\n",
     "    print(f1, end=',')\n",
     "    f1, f2 = f2, f1+f2\n",
-    "print()\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%who int\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%who int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
-    "%timeit np.random.normal(size=100)\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "%timeit np.random.normal(size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from time import sleep\n",
     "def fibonacci(n):\n",
     "    f1, f2 = 1, 1\n",
@@ -244,23 +372,43 @@
     "    for i in range(n):\n",
     "        f1, f2 = f2, f1+f2\n",
     "        res.append(f1)\n",
-    "    return res\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%prun fibonacci(10)\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%prun fibonacci(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install py-heat-magic\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "%load_ext heat\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "!{sys.executable} -m pip install py-heat-magic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext heat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%heat\n",
     "\n",
     "from time import sleep\n",
@@ -272,15 +420,25 @@
     "        res.append(f1)\n",
     "    return res\n",
     "\n",
-    "fibonacci(100)\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "fibonacci(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install tqdm\n",
-    "```\n",
-    "\n",
-    "```python\n",
+    "!{sys.executable} -m pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from tqdm.notebook import tqdm\n",
     "from time import sleep\n",
     "\n",
@@ -296,14 +454,16 @@
     "            res.append(x)\n",
     "            break\n",
     "\n",
-    "res\n",
-    "```\n"
+    "res"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<!-- #endregion -->\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
