--- a/notebooks/02-gitbasics.ipynb
+++ b/notebooks/02-gitbasics.ipynb
@@ -10,9 +10,9 @@
    "source": [
     "# Git\n",
     "\n",
-    "Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.\n",
+    "Git est un logiciel de gestion de versions.\n",
     "\n",
-    "Official website https://git-scm.com"
+    "Site officiel https://git-scm.com"
    ]
   },
   {
@@ -25,10 +25,10 @@
    "source": [
     "# GitHub\n",
     "\n",
-    "- Web-based hosting service for version control using Git. \n",
-    "- Offers all of the distributed version control and source code management (SCM) functionality of Git as well as adding its own features. \n",
-    "- Provides access control and several collaboration features such as bug tracking, feature requests, task management, and wikis for every project.\n",
-    "- Github is the largest host of source code in the world."
+    "- Service web utilisant Git comme gestionnaire de version. \n",
+    "- Github permet d'enregistrer et partager toutes les étapes de développement d'un logiciel ou de la rédaction d'un document au format texte au cours du temps. A tout moment vous pouvez revenir à une précedente version, l'ensemble de l'historique est toujours préservé. \n",
+    "- Github permet d'organiser un travail collaboratif avec différents niveaux d'accès, la gestion des bugs et hébergement de la documentation.\n",
+    "- Github est la plus grande bibliothèque de codes du monde."
    ]
   },
   {
@@ -39,15 +39,15 @@
     }
    },
    "source": [
-    "# About SCM\n",
+    "# SCM (Source Code Management)\n",
     "\n",
-    "- Records changes to a file or set of files over time.\n",
-    "- You can recall specific versions later.\n",
-    "- You can use it with nearly any type of file on a computer.\n",
-    "- This is the better way to collaborate on the same document.\n",
-    "- Every change is committed with an author and a date.\n",
-    "- Figures are downloaded from [Pro Git book](http://git-scm.com/book).\n",
-    "- \"Become a git guru\" tutorial (https://www.atlassian.com/git/tutorials)."
+    "- Enregistrement des changements dans un ou plusieurs fichiers au cours du temps.\n",
+    "- Vous pouvez revenir a tout moment vers une version précedente.\n",
+    "- Fonctionne avec tout type de document.\n",
+    "- Excellent moyen pour collaborer sur un même document.\n",
+    "- Chaque modification enregistrée est datée avec le nom de son auteur.\n",
+    "- Les figures proviennent du [Pro Git book](http://git-scm.com/book).\n",
+    "- Ce support est fortement inspiré de \"Become a git guru\" (https://www.atlassian.com/git/tutorials)."
    ]
   },
   {
@@ -58,29 +58,14 @@
     }
    },
    "source": [
-    "# Local Version Control System\n",
-    "\n",
-    "<img src=\"images/local.png\" alt=\"rcs\" width=\"400px\"/>\n",
-    "\n",
-    "- Collaboration is not really possible."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Distributed Version Control Systems\n",
+    "# Gestion distribuée des versions\n",
     "\n",
     "<img src=\"images/git.png\" alt=\"git\" width=\"300px\"/>\n",
     "\n",
-    "- Clients fully mirror the repository.\n",
-    "- You can collaborate with different groups of people in different ways simultaneously within the same project.\n",
-    "- No need of network connection.\n",
-    "- Multiple backups.\n",
+    "- Chaque membre du projet possède ne copie totale du projet\n",
+    "- On peut contribuer seul ou a plusieurs.\n",
+    "- Pas besoin de connexion réseau\n",
+    "- Les sauvegardes sont très nombreuses grâce à ce système.\n",
     " \n",
     " "
    ]
@@ -93,13 +78,13 @@
     }
    },
    "source": [
-    "# Configure Git\n",
+    "# Configuration\n",
     "\n",
-    "Settings are saved on the computer for all your git repositories.\n",
+    "Il faut renseigner votre identité avec votre adresse de messagerie\n",
     "\n",
     "```\n",
     "git config --global user.name “Prenom Nom\"\n",
-    "git config --global user.email “prenom.nom@univ-rennes2.fr\"\n",
+    "git config --global user.email “prenom.nom@domaine.fr\"\n",
     "```"
    ]
   },
@@ -111,15 +96,9 @@
     }
    },
    "source": [
-    "# Cloning the repository\n",
+    "# Clonage du dépôt\n",
     "\n",
-    "```bash\n",
-    "git clone ssh://svmass2/git/big-data.git\n",
-    "```\n",
-    "or\n",
-    "```bash\n",
-    "git clone https://github.com/pnavaro/big-data.git\n",
-    "```"
+    "git clone https://github.com/pnavaro/big-data.git"
    ]
   },
   {
@@ -367,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
