--- a/notebooks/04-docker.ipynb
+++ b/notebooks/04-docker.ipynb
@@ -4,10 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter\n",
+    "# Docker\n",
     "\n",
     "![jupyter](images/jupyter-logo.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -513,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
