Add markdown notebook

--- a/notebooks/02-gitbasics.ipynb
+++ b/notebooks/02-gitbasics.ipynb
@@ -109,7 +109,7 @@
     }
    },
    "source": [
-    "# To save your work locally create a branch\n",
+    "# Branche\n",
     "\n",
     "```bash\n",
     "git checkout -b my_branch\n",
@@ -146,9 +146,7 @@
     }
    },
    "source": [
-    "# Locally saving your modifications\n",
-    "\n",
-    "Get your files status"
+    "# Verifier les fichiers modifiés\n"
    ]
   },
   {
@@ -167,19 +165,12 @@
       "On branch master\n",
       "Your branch is up to date with 'origin/master'.\n",
       "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   ../pyproject.toml\n",
-      "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t../.doit.db\n",
-      "\t../nbcourse.yml\n",
-      "\t../pages/\n",
-      "\t../theme/\n",
+      "\t../environment.yml\n",
+      "\t../install.R\n",
       "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
      ]
     }
    ],
@@ -196,7 +187,7 @@
     }
    },
    "source": [
-    "# Add the modified file to the index\n",
+    "# Ajouter le fichier dans l'index\n",
     "\n",
     "```bash\n",
     "git add your_notebook_copy.ipynb\n",
@@ -211,7 +202,7 @@
     }
    },
    "source": [
-    "Checking which files are ready to be committed."
+    "# Verification avant validation"
    ]
   },
   {
@@ -235,7 +226,7 @@
     }
    },
    "source": [
-    "Now save your work, the branch is local.\n",
+    "# Validation (commit)\n",
     "\n",
     "```bash\n",
     "git commit -m 'Some modifications'\n",
@@ -250,9 +241,7 @@
     }
    },
    "source": [
-    "# Updating from the Repository\n",
-    "\n",
-    "If the master branch has changed. To get all new updates :"
+    "# Synchroniser avec la version distante sur le dépôt\n"
    ]
   },
   {
@@ -270,7 +259,7 @@
    },
    "source": [
     "```bash\n",
-    "git pull origin master\n",
+    "git fetch origin\n",
     "```"
    ]
   },
@@ -282,23 +271,21 @@
     }
    },
    "source": [
-    "# Solve conflicts\n",
+    "# Résoudre les conflits\n",
     "\n",
-    "- If you have some conflicts, no problem just do :\n",
+    "- En cas de problémes sur un fichier, vous pouvez annuler toutes les modifications avec :\n",
     "\n",
     "```bash\n",
     "git checkout notebook.ipynb\n",
     "```\n",
     "\n",
-    "It will give you back the original version of notebook.ipynb\n",
-    "\n",
-    "- If you have big troubles, you can do\n",
+    "- Si vraiment il y a de gros soucis\n",
     "\n",
     "```bash\n",
     "git reset --hard\n",
     "```\n",
     "\n",
-    "Be careful with this last command, you remove uncommited changes.\n"
+    "Attention cette dernière commande, annule tous les changments qui n'ont pas été validés."
    ]
   },
   {
@@ -309,18 +296,24 @@
     }
    },
    "source": [
-    "# Git through IDE\n",
+    "# Git en version graphique\n",
     "\n",
-    "- Install bash-completion and source git-prompt.sh.\n",
-    "- Use Gui tools:\n",
-    "\t- [GitHub Desktop](https://desktop.github.com/)\n",
-    "\t- [Sourcetree](https://fr.atlassian.com/software/sourcetree)\n",
-    "\t- [GitKraken](https://www.gitkraken.com/)\n",
-    "- VCS plugin of IDE\n",
+    "- [GitHub Desktop](https://desktop.github.com/)\n",
+    "- [Sourcetree](https://fr.atlassian.com/software/sourcetree)\n",
+    "- [GitKraken](https://www.gitkraken.com/)\n",
+    "- [Fork](https://git-fork.com)\n",
+    "- Plugins\n",
     "\t- [RStudio](https://www.rstudio.com/)\n",
     "\t- [Eclipse](https://www.eclipse.org/downloads/)\n",
     "\t- [JetBrains](https://www.jetbrains.com/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
