--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -1,10 +1,140 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.output_result { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "display(HTML(\"<style>.output_result { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Markdown\n",
+    "\n",
+    "La langage [Markdown](https://www.markdownguide.org) est un système de formatage de texte. Il est similaire au format [html](https://html.spec.whatwg.org/multipage/) utilisé pour éditer les pages hébergées sur un serveur web et le format [reStructuredText](https://docutils.sourceforge.io/rst.html) que l'on retrouve dans les wikis. \n",
+    "\n",
+    "Le format html utilise un système de balises qui rend le texte peu lisible. Le format rst est plus lisible avec son système de balisage plus léger. Il est utilisé notamment pour la documentation du langage Python mais son utilisation est moins répandu que le markdown. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def bspline(p, j, x):\n",
+    "     \"\"\"\n",
+    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+    "    \n",
+    "    .. math::\n",
+    "        B_{i,0}(x) := \\left\\{\n",
+    "        \\begin{matrix}\n",
+    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
+    "        0 & \\mathrm{otherwise} \n",
+    "        \\end{matrix}\n",
+    "        \\right.\n",
+    "    \n",
+    "    .. math::\n",
+    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+    "    \n",
+    "     \"\"\"\n",
+    "\n",
+    "     assert ((x >= 0.0) & (x <= 1.0))\n",
+    "     assert ((type(p) == int) & (type(j) == int))\n",
+    "\n",
+    "     if p == 0:\n",
+    "         if j == 0:\n",
+    "             return 1.0\n",
+    "         else:\n",
+    "             return 0.0\n",
+    "     else:\n",
+    "         w = (x - j) / p\n",
+    "         w1 = (x - j - 1) / p\n",
+    "         return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~julia\n",
+    "\"\"\"\n",
+    "    bspline(p, j, x)\n",
+    "\n",
+    "Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+    "Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+    "\n",
+    "```math\n",
+    "B_{i,0}(x) := \\\\left\\\\{\n",
+    "\\\\begin{matrix}\n",
+    "1 & \\\\mathrm{if}  \\\\quad t_i ≤ x < t_{i+1} \\\\\\\\\n",
+    "0 & \\\\mathrm{otherwise} \n",
+    "\\\\end{matrix}\n",
+    "\\\\right.\n",
+    "```\n",
+    "\n",
+    "```math\n",
+    "B_{i,p}(x) := \\\\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+    "+ \\\\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+    "```\n",
+    "\"\"\"\n",
+    "function bspline(p::Int, j::Int, x::Float64)\n",
+    "   if p == 0\n",
+    "       if j == 0\n",
+    "           return 1.0\n",
+    "       else\n",
+    "           return 0.0\n",
+    "       end\n",
+    "   else\n",
+    "       w = (x - j) / p\n",
+    "       w1 = (x - j - 1) / p\n",
+    "   end\n",
+    "   return (w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x))\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé généralement\n",
+    "\n",
+    "Les fichiers markdown sont identifiés par la terminaison `.md`.\n",
+    "\n",
+    "Dans les exemples qui vont suivre, je présente les bases du langage markdown. Il faut savoir qu'il existe un grand nombre de dialectes. Github propose des fonctionalités enrichies. Pour voir toutes les possibilités, je conseille d'aller regarder la démonstration de l'éditeur en ligne [codimd](https://demo.codimd.org/features).\n",
     "\n",
     "## Titres\n",
     "\n",
@@ -233,8 +363,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les fonctionnalités peuvent être plus riche avec des emojis par example. Voir [Mastering Markdown](https://guides.github.com/features/mastering-markdown/)"
+    "Les fonctionnalités peuvent être plus riches avec des emojis par example. Voir [Mastering Markdown](https://guides.github.com/features/mastering-markdown/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=0)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing bspline.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file bspline.py\n",
+    "def bspline(p, j, x):\n",
+    "     \"\"\"\n",
+    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+    "\n",
+    "    .. math::\n",
+    "        B_{i,0}(x) := \\left\\{\n",
+    "        \\begin{matrix}\n",
+    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
+    "        0 & \\mathrm{otherwise} \n",
+    "        \\end{matrix}\n",
+    "        \\right.\n",
+    "\n",
+    "    .. math::\n",
+    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+    "\n",
+    "     \"\"\"\n",
+    "\n",
+    "     assert ((x >= 0.0) & (x <= 1.0))\n",
+    "     assert ((type(p) == int) & (type(j) == int))\n",
+    "\n",
+    "     if p == 0:\n",
+    "         if j == 0:\n",
+    "             return 1.0\n",
+    "         else:\n",
+    "             return 0.0\n",
+    "     else:\n",
+    "         w = (x - j) / p\n",
+    "         w1 = (x - j - 1) / p\n",
+    "         return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function bspline in module __main__:\n",
+      "\n",
+      "bspline(p, j, x)\n",
+      "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+      "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+      "    \n",
+      "    .. math::\n",
+      "        B_{i,0}(x) := \\left\\{\n",
+      "       egin{matrix}\n",
+      "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\n",
+      "        0 & \\mathrm{otherwise} \n",
+      "        \\end{matrix}\n",
+      "        \r",
+      "ight.\n",
+      "    \n",
+      "    .. math::\n",
+      "            B_{i,p}(x) := \f",
+      "rac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+      "            + \f",
+      "rac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bspline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
