--- a/notebooks/03-markdown.ipynb
+++ b/notebooks/03-markdown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,89 +48,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+      "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+      "    \n",
+      "    .. math::\n",
+      "        B_{i,0}(x) := \\left\\{\n",
+      "        \begin{matrix}\n",
+      "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\n",
+      "        0 & \\mathrm{otherwise} \n",
+      "        \\end{matrix}\n",
+      "        \r",
+      "ight.\n",
+      "    \n",
+      "    .. math::\n",
+      "            B_{i,p}(x) := \f",
+      "rac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+      "            + \f",
+      "rac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+      "    \n",
+      "     \n"
+     ]
+    }
+   ],
    "source": [
-    "```python\n",
-    "def bspline(p, j, x):\n",
-    "     \"\"\"\n",
-    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-    "    \n",
-    "    .. math::\n",
-    "        B_{i,0}(x) := \\left\\{\n",
-    "        \\begin{matrix}\n",
-    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
-    "        0 & \\mathrm{otherwise} \n",
-    "        \\end{matrix}\n",
-    "        \\right.\n",
-    "    \n",
-    "    .. math::\n",
-    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-    "    \n",
-    "     \"\"\"\n",
-    "\n",
-    "     assert ((x >= 0.0) & (x <= 1.0))\n",
-    "     assert ((type(p) == int) & (type(j) == int))\n",
-    "\n",
-    "     if p == 0:\n",
-    "         if j == 0:\n",
-    "             return 1.0\n",
-    "         else:\n",
-    "             return 0.0\n",
-    "     else:\n",
-    "         w = (x - j) / p\n",
-    "         w1 = (x - j - 1) / p\n",
-    "         return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)\n",
-    "```"
+    "print(bspline.__doc__)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "~~~julia\n",
-    "\"\"\"\n",
-    "    bspline(p, j, x)\n",
-    "\n",
-    "Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
-    "Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
-    "\n",
-    "```math\n",
-    "B_{i,0}(x) := \\\\left\\\\{\n",
-    "\\\\begin{matrix}\n",
-    "1 & \\\\mathrm{if}  \\\\quad t_i ≤ x < t_{i+1} \\\\\\\\\n",
-    "0 & \\\\mathrm{otherwise} \n",
-    "\\\\end{matrix}\n",
-    "\\\\right.\n",
-    "```\n",
-    "\n",
-    "```math\n",
-    "B_{i,p}(x) := \\\\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
-    "+ \\\\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
-    "```\n",
-    "\"\"\"\n",
-    "function bspline(p::Int, j::Int, x::Float64)\n",
-    "   if p == 0\n",
-    "       if j == 0\n",
-    "           return 1.0\n",
-    "       else\n",
-    "           return 0.0\n",
-    "       end\n",
-    "   else\n",
-    "       w = (x - j) / p\n",
-    "       w1 = (x - j - 1) / p\n",
-    "   end\n",
-    "   return (w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x))\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé généralement\n",
+    "La documentation des fonctions Julia est en markdown. Il n'y a pas de système de documentation intégré pour la langage R mais [roxygen2](https://cran.r-project.org/web/packages/roxygen2/) est le package utilisé. La syntaxe a des similarités avec [$\\LaTeX$](https://fr.wikipedia.org/wiki/LaTeX)\n",
     "\n",
     "Les fichiers markdown sont identifiés par la terminaison `.md`.\n",
     "\n",
@@ -305,6 +262,13 @@
     "Colonne 1 | Colonne 2 | Colonne 3\n",
     "--- | --- | ---\n",
     "Pomme | Banane | Orange\n",
+    "1 | 2 | 3\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Colonne 1 | Colonne 2 | Colonne 3\n",
+    ":--- | :---: | ---:\n",
+    "Pomme | Banane | Orange\n",
     "1 | 2 | 3"
    ]
   },
@@ -313,6 +277,7 @@
    "metadata": {},
    "source": [
     "# Equations\n",
+    "Les mathématiques sont écrites en langage $\\LaTeX$\n",
     "\n",
     "$$\n",
     "\\text{Dist}(G):=\\bigcup_{n\\ge 0} \\text{Dist}_n(G).\n",
@@ -323,14 +288,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{eqnarray*}\n",
-    "\\frac{d x_1(t) }{dt} &=& \\frac{1}{\\varepsilon}v_1(t) \\\\\n",
-    "\\frac{d x_2(t) }{dt} &=& \\frac{1}{\\varepsilon} v_2(t) \\\\\n",
-    "\\frac{d x_3(t) }{dt}&=& v_3(t) \\\\\n",
-    "\\frac{d v_1(t) }{dt} &=& E_1(t, x(t)) + \\frac{1}{\\varepsilon}v_2(t)\\\\\n",
-    "\\frac{d v_2(t) }{dt} &=& E_2(t, x(t)) - \\frac{1}{\\varepsilon}v_1(t)\\\\\n",
-    "\\frac{d v_3(t) }{dt} &=& E_3(t, x(t)) \n",
-    "\\end{eqnarray*}"
+    "\\begin{align}\n",
+    "\\frac{d x_1(t) }{dt} &= \\frac{1}{\\varepsilon}v_1(t)  &\\qquad \\frac{d v_1(t) }{dt} &= E_1(t, x(t)) + \\frac{1}{\\varepsilon}v_2(t)\\\\\n",
+    "\\frac{d x_2(t) }{dt} &= \\frac{1}{\\varepsilon} v_2(t) &\\qquad \\frac{d v_2(t) }{dt} &= E_2(t, x(t)) - \\frac{1}{\\varepsilon}v_1(t)\\\\\n",
+    "\\frac{d x_3(t) }{dt} &= v_3(t)                       &\\qquad \\frac{d v_3(t) }{dt} &= E_3(t, x(t)) \n",
+    "\\end{align}"
    ]
   },
   {
@@ -473,11 +435,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Documentation de code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bspline(p, j, x):\n",
+    "    \"\"\"\n",
+    "    Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+    "    Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+    "    \n",
+    "    .. math::\n",
+    "        B_{i,0}(x) := \\left\\{\n",
+    "        \\begin{matrix}\n",
+    "        1 & \\mathrm{if}  \\quad t_i ≤ x < t_{i+1} \\\\\n",
+    "        0 & \\mathrm{otherwise} \n",
+    "        \\end{matrix}\n",
+    "        \\right.\n",
+    "    \n",
+    "    .. math::\n",
+    "            B_{i,p}(x) := \\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+    "            + \\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "    assert ((x >= 0.0) & (x <= 1.0))\n",
+    "    assert ((type(p) == int) & (type(j) == int))\n",
+    "\n",
+    "    if p == 0:\n",
+    "         if j == 0:\n",
+    "            return 1.0\n",
+    "         else:\n",
+    "            return 0.0\n",
+    "    else:\n",
+    "        w = (x - j) / p\n",
+    "        w1 = (x - j - 1) / p\n",
+    "        return w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~julia\n",
+    "\"\"\"\n",
+    "    bspline(p, j, x)\n",
+    "\n",
+    "Return the value at x in [0,1[ of the B-spline with integer nodes of degree p with support starting at j.\n",
+    "Implemented recursively using the [De Boor's Algorithm](https://en.wikipedia.org/wiki/De_Boor%27s_algorithm)\n",
+    "\n",
+    "```math\n",
+    "B_{i,0}(x) := \\\\left\\\\{\n",
+    "\\\\begin{matrix}\n",
+    "1 & \\\\mathrm{if}  \\\\quad t_i ≤ x < t_{i+1} \\\\\\\\\n",
+    "0 & \\\\mathrm{otherwise} \n",
+    "\\\\end{matrix}\n",
+    "\\\\right.\n",
+    "```\n",
+    "\n",
+    "```math\n",
+    "B_{i,p}(x) := \\\\frac{x - t_i}{t_{i+p} - t_i} B_{i,p-1}(x) \n",
+    "+ \\\\frac{t_{i+p+1} - x}{t_{i+p+1} - t_{i+1}} B_{i+1,p-1}(x).\n",
+    "```\n",
+    "\"\"\"\n",
+    "function bspline(p::Int, j::Int, x::Float64)\n",
+    "   if p == 0\n",
+    "       if j == 0\n",
+    "           return 1.0\n",
+    "       else\n",
+    "           return 0.0\n",
+    "       end\n",
+    "   else\n",
+    "       w = (x - j) / p\n",
+    "       w1 = (x - j - 1) / p\n",
+    "   end\n",
+    "   return (w * bspline(p - 1, j, x) + (1 - w1) * bspline(p - 1, j + 1, x))\n",
+    "end\n",
+    "~~~"
+   ]
   },
   {
    "cell_type": "code",
